feat(core/tasks): rework task flow in revision (#570)

--- a/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
@@ -760,15 +760,19 @@ task:
         assignee: Assignee
         deadline: Deadline
         description: Description
+        requester: Requester
         title: Title
+        delay: 'Delay (in days)'
     finished:
         hide: 'Hide finished tasks (%number%)'
         show: 'Show finished tasks (%number%)'
     close: Close
     history: History
     in_progress: 'This task is '
+    planned:
+        title: 'Planned tasks'
     info:
-        change_order: 'Change task order'
+        change_order: 'Change order'
         empty: 'No tasks for this document'
         locked: 'Revision locked by %user% until %time%'
     mail:
