--- a/demo/skeleton/translations/messages.fr.yaml
+++ b/demo/skeleton/translations/messages.fr.yaml
@@ -5,15 +5,15 @@ aria:
     skip-to-content: 'Passer directement au contenu'
     toggle-navbar: 'Afficher la navigation'
 block:
-  release:
-    title: 'Release %version%'
-  grid:
+    grid:
         see_also: 'Voir également'
+    release:
+        title: 'Release %version%'
 blog:
     filter: Filtres
-    title: 'What’s new?'
     grid:
-        title: 'News'
+        title: News
+    title: 'What’s new?'
 breadcrumb:
     back-to: 'Retour à la page %title%'
     homepage: 'd''accueil'
@@ -58,6 +58,15 @@ month:
     September: Septembre
 navbar:
     swith-to-locale: Français
+release:
+    search:
+        choose_category: 'Choisissez une catégorie'
+        filters_title: Filtre
+        label: Mots-clés
+        placeholder: Mots-clés
+        remove_tag: 'Supprimer le filtre'
+        selected_categories: 'Tags sélectionnés'
+        submit: Rechercher
 site:
     copy: 'Copyright %year%'
     lead: 'Un CMS sur mesure au service du secteur public'
@@ -71,12 +80,3 @@ usergroup:
     team-meeting: Durée
     title: 'Prochaine session'
     topic: Sujets
-release:
-    search:
-        filters_title: 'Filtre'
-        choose_category: 'Choisissez une catégorie'
-        remove_tag: 'Supprimer le filtre'
-        selected_categories: 'Tags sélectionnés'
-        placeholder: 'Mots-clés'
-        label: 'Mots-clés'
-        submit: 'Rechercher'
