--- a/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
@@ -9,6 +9,8 @@ media_library:
         load_more: 'Loading more files ...'
         add:
             title: Upload
+        delete:
+            title: 'Delete file'
 
 json_menu_nested:
     error:
