feat(core/media-lib): implement file rename
We rename the path, not the original filename.

--- a/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
@@ -11,6 +11,8 @@ media_library:
             title: Upload
         delete:
             title: 'Delete file'
+        rename:
+            title: 'Rename file'
 
 json_menu_nested:
     error:
