chore: update from prod

--- a/demo/skeleton/translations/messages.fr.yaml
+++ b/demo/skeleton/translations/messages.fr.yaml
@@ -57,7 +57,7 @@ month:
     October: octobre
     September: Septembre
 navbar:
-    swith-to-locale: Français
+    swith-to-locale: FR
 release:
     search:
         choose_category: 'Choisissez une catégorie'
