--- a/demo/skeleton/translations/messages.nl.yaml
+++ b/demo/skeleton/translations/messages.nl.yaml
@@ -57,7 +57,7 @@ month:
     October: oktober
     September: September
 navbar:
-    swith-to-locale: Nederlands
+    swith-to-locale: NL
 release:
     search:
         choose_category: 'Kies een categorie'
