chore: from prod

--- a/demo/skeleton/translations/messages.nl.yaml
+++ b/demo/skeleton/translations/messages.nl.yaml
@@ -54,7 +54,7 @@ month:
     March: Maart
     May: Mei
     November: November
-    October: oktober
+    October: Oktober
     September: September
 navbar:
     swith-to-locale: NL
