feat(demo): update demo (#638)
Co-authored-by: David mattei <d.mattei89@gmail.com>

--- a/demo/skeleton/translations/messages.fr.yaml
+++ b/demo/skeleton/translations/messages.fr.yaml
@@ -54,10 +54,10 @@ month:
     March: Mars
     May: Mai
     November: Novembre
-    October: octobre
+    October: Octobre
     September: Septembre
 navbar:
-    swith-to-locale: Français
+    swith-to-locale: FR
 release:
     search:
         choose_category: 'Choisissez une catégorie'
