--- a/demo/skeleton/translations/messages.nl.yaml
+++ b/demo/skeleton/translations/messages.nl.yaml
@@ -54,10 +54,10 @@ month:
     March: Maart
     May: Mei
     November: November
-    October: oktober
+    October: Oktober
     September: September
 navbar:
-    swith-to-locale: Nederlands
+    swith-to-locale: NL
 release:
     search:
         choose_category: 'Kies een categorie'
