--- a/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
@@ -5,6 +5,8 @@ media_library:
             title: 'Add folder'
             submit: Create
             cancel: Cancel
+        rename:
+            title: 'Rename folder'
     file:
         load_more: 'Loading more files ...'
         add:
