ref: first brands

--- a/EMS/core-bundle/src/Resources/translations/emsco-forms.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-forms.en.yml
@@ -691,7 +691,9 @@ icon:
     deviantart: Deviantart
     digg: Digg
     dribbble: Dribbble
+    dropbox-old: Dropbox (dep)
     dropbox: Dropbox
+    drupal-old: Drupal (dep)
     drupal: Drupal
     empire: Empire
     facebook: Facebook
