feat: font awesome 6 Brands

--- a/EMS/core-bundle/src/Resources/translations/emsco-forms.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-forms.en.yml
@@ -2061,8 +2061,511 @@ icon:
         person-circle-check: 'Person circle check'
         turn-up: 'Turn up'
         level-up-alt: 'Level up alt'
+    fab6:
+        monero: 'Monero'
+        hooli: 'Hooli'
+        yelp: 'Yelp'
+        cc-visa: 'CC Visa'
+        lastfm: 'Lastfm'
+        shopware: 'Shopware'
+        creative-commons-nc: 'Creative Commons NC'
+        aws: 'Aws'
+        redhat: 'Redhat'
+        yoast: 'Yoast'
+        cloudflare: 'Cloudflare'
+        ups: 'Ups'
+        wpexplorer: 'Wpexplorer'
+        dyalog: 'Dyalog'
+        bity: 'Bity'
+        stackpath: 'Stackpath'
+        buysellads: 'Buysellads'
+        first-order: 'First Order'
+        modx: 'Modx'
+        guilded: 'Guilded'
+        vnv: 'Vnv'
+        square-js: 'Square JS'
+        js-square: 'JS Square'
+        microsoft: 'Microsoft'
+        qq: 'Qq'
+        orcid: 'Orcid'
+        java: 'Java'
+        invision: 'Invision'
+        creative-commons-pd-alt: 'Creative Commons PD alt'
+        centercode: 'Centercode'
+        glide-g: 'Glide G'
+        drupal: 'Drupal'
+        hire-a-helper: 'Hire a Helper'
+        creative-commons-by: 'Creative Commons BY'
+        unity: 'Unity'
+        whmcs: 'Whmcs'
+        rocketchat: 'Rocketchat'
+        vk: 'Vk'
+        untappd: 'Untappd'
+        mailchimp: 'Mailchimp'
+        css3-alt: 'CSS3 alt'
+        square-reddit: 'Square Reddit'
+        reddit-square: 'Reddit Square'
+        vimeo-v: 'Vimeo V'
+        contao: 'Contao'
+        square-font-awesome: 'Square Font Awesome'
+        deskpro: 'Deskpro'
+        sistrix: 'Sistrix'
+        square-instagram: 'Square Instagram'
+        instagram-square: 'Instagram Square'
+        battle-net: 'Battle Net'
+        the-red-yeti: 'The Red Yeti'
+        square-hacker-news: 'Square Hacker news'
+        hacker-news-square: 'Hacker News Square'
+        edge: 'Edge'
+        napster: 'Napster'
+        square-snapchat: 'Square Snapchat'
+        snapchat-square: 'Snapchat Square'
+        google-plus-g: 'Google Plus G'
+        artstation: 'Artstation'
+        markdown: 'Markdown'
+        sourcetree: 'Sourcetree'
+        google-plus: 'Google Plus'
+        diaspora: 'Diaspora'
+        foursquare: 'Foursquare'
+        stack-overflow: 'Stack-Overflow'
+        github-alt: 'Github alt'
+        phoenix-squadron: 'Phoenix Squadron'
+        pagelines: 'Pagelines'
+        algolia: 'Algolia'
+        red-river: 'Red River'
+        creative-commons-sa: 'Creative Commons SA'
+        safari: 'Safari'
+        google: 'Google'
+        square-font-awesome-stroke: 'Square Font Awesome Stroke'
+        font-awesome-alt: 'Font Awesome alt'
+        atlassian: 'Atlassian'
+        linkedin-in: 'Linkedin-In'
+        digital-ocean: 'Digital Ocean'
+        nimblr: 'Nimblr'
+        chromecast: 'Chromecast'
+        evernote: 'Evernote'
+        hacker-news: 'Hacker News'
+        creative-commons-sampling: 'Creative Commons - Sampling'
+        adversal: 'Adversal'
+        creative-commons: 'Creative Commons'
+        watchman-monitoring: 'Watchman Monitoring'
+        fonticons: 'Fonticons'
+        weixin: 'Weixin'
+        shirtsinbulk: 'Shirtsinbulk'
+        codepen: 'Codepen'
+        git-alt: 'Git alt'
+        lyft: 'Lyft'
+        rev: 'Rev'
+        windows: 'Windows'
+        wizards-of-the-coast: 'Wizards of the Coast'
+        square-viadeo: 'Square Viadeo'
+        viadeo-square: 'Viadeo Square'
+        meetup: 'Meetup'
+        centos: 'Centos'
+        adn: 'Adn'
+        cloudsmith: 'Cloudsmith'
+        pied-piper-alt: 'Pied Piper alt'
+        square-dribbble: 'Square Dribbble'
+        dribbble-square: 'Dribbble Square'
+        codiepie: 'Codiepie'
+        node: 'Node'
+        mix: 'Mix'
+        steam: 'Steam'
+        cc-apple-pay: 'CC Apple-Pay'
+        scribd: 'Scribd'
+        openid: 'Openid'
+        instalod: 'Instalod'
+        expeditedssl: 'Expeditedssl'
+        sellcast: 'Sellcast'
+        square-twitter: 'Square Twitter'
+        twitter-square: 'Twitter Square'
+        r-project: 'R-Project'
+        delicious: 'Delicious'
+        freebsd: 'Freebsd'
+        vuejs: 'Vuejs'
+        accusoft: 'Accusoft'
+        ioxhost: 'Ioxhost'
+        fonticons-fi: 'Fonticons FI'
+        app-store: 'App-Store'
+        cc-mastercard: 'CC Mastercard'
+        itunes-note: 'Itunes note'
+        golang: 'Golang'
+        kickstarter: 'Kickstarter'
+        grav: 'Grav'
+        weibo: 'Weibo'
+        uncharted: 'Uncharted'
+        firstdraft: 'Firstdraft'
+        square-youtube: 'Square YouTube'
+        youtube-square: 'Youtube square'
+        wikipedia-w: 'Wikipedia w'
+        wpressr: 'Wpressr'
+        rendact: 'Rendact'
+        angellist: 'Angellist'
+        galactic-republic: 'Galactic Republic'
+        nfc-directional: 'NFC Directional'
+        skype: 'Skype'
+        joget: 'Joget'
+        fedora: 'Fedora'
+        stripe-s: 'Stripe s'
+        meta: 'Meta'
+        laravel: 'Laravel'
+        hotjar: 'Hotjar'
+        bluetooth-b: 'Bluetooth b'
+        sticker-mule: 'Sticker Mule'
+        creative-commons-zero: 'Creative Commons zero'
+        hips: 'Hips'
+        behance: 'Behance'
+        reddit: 'Reddit'
+        discord: 'Discord'
+        chrome: 'Chrome'
+        app-store-ios: 'App-Store IOS'
+        cc-discover: 'CC Discover'
+        wpbeginner: 'Wpbeginner'
+        confluence: 'Confluence'
+        mdb: 'Mdb'
+        dochub: 'Dochub'
+        accessible-icon: 'Accessible Icon'
+        ebay: 'Ebay'
+        amazon: 'Amazon'
+        unsplash: 'Unsplash'
+        yarn: 'Yarn'
+        square-steam: 'Square Steam'
+        steam-square: 'Steam square'
+        500px: '500px'
+        square-vimeo: 'Square Vimeo'
+        vimeo-square: 'Vimeo square'
+        asymmetrik: 'Asymmetrik'
+        font-awesome: 'Font-Awesome'
+        font-awesome-flag: 'Font-Awesome flag'
+        font-awesome-logo-full: 'Font-Awesome logo full'
+        gratipay: 'Gratipay'
+        apple: 'Apple'
+        hive: 'Hive'
+        gitkraken: 'Gitkraken'
+        keybase: 'Keybase'
+        apple-pay: 'Apple-Pay'
+        padlet: 'Padlet'
+        amazon-pay: 'Amazon-Pay'
+        square-github: 'Square GitHub'
+        github-square: 'GitHub square'
+        stumbleupon: 'Stumbleupon'
+        fedex: 'Fedex'
+        phoenix-framework: 'Phoenix framework'
+        shopify: 'Shopify'
+        neos: 'Neos'
+        hackerrank: 'Hackerrank'
+        researchgate: 'Researchgate'
+        swift: 'Swift'
+        angular: 'Angular'
+        speakap: 'Speakap'
+        angrycreative: 'Angrycreative'
+        y-combinator: 'Y-combinator'
+        empire: 'Empire'
+        envira: 'Envira'
+        square-gitlab: 'Square gitlab'
+        gitlab-square: 'Gitlab square'
+        studiovinari: 'Studiovinari'
+        pied-piper: 'Pied piper'
+        wordpress: 'Wordpress'
+        product-hunt: 'Product hunt'
+        firefox: 'Firefox'
+        linode: 'Linode'
+        goodreads: 'Goodreads'
+        square-odnoklassniki: 'Square odnoklassniki'
+        odnoklassniki-square: 'Odnoklassniki square'
+        jsfiddle: 'Jsfiddle'
+        sith: 'Sith'
+        themeisle: 'Themeisle'
+        page4: 'Page4'
+        hashnode: 'Hashnode'
+        react: 'React'
+        cc-paypal: 'CC Paypal'
+        squarespace: 'Squarespace'
+        cc-stripe: 'CC Stripe'
+        creative-commons-share: 'Creative Commons share'
+        bitcoin: 'Bitcoin'
+        keycdn: 'Keycdn'
+        opera: 'Opera'
+        itch-io: 'Itch IO'
+        umbraco: 'Umbraco'
+        galactic-senate: 'Galactic Senate'
+        ubuntu: 'Ubuntu'
+        draft2digital: 'Draft2digital'
+        stripe: 'Stripe'
+        houzz: 'Houzz'
+        gg: 'Gg'
+        dhl: 'Dhl'
+        square-pinterest: 'Square Pinterest'
+        pinterest-square: 'Pinterest square'
+        xing: 'Xing'
+        blackberry: 'Blackberry'
+        creative-commons-pd: 'Creative Commons pd'
+        playstation: 'Playstation'
+        quinscape: 'Quinscape'
+        less: 'Less'
+        blogger-b: 'Blogger b'
+        opencart: 'Opencart'
+        vine: 'Vine'
+        paypal: 'Paypal'
+        gitlab: 'Gitlab'
+        typo3: 'Typo3'
+        reddit-alien: 'Reddit Alien'
+        yahoo: 'Yahoo'
+        dailymotion: 'Dailymotion'
+        affiliatetheme: 'Affiliatetheme'
+        pied-piper-pp: 'Pied Piper pp'
+        bootstrap: 'Bootstrap'
+        odnoklassniki: 'Odnoklassniki'
+        nfc-symbol: 'NFC symbol'
+        ethereum: 'Ethereum'
+        speaker-deck: 'Speaker deck'
+        creative-commons-nc-eu: 'Creative Commons nc eu'
+        patreon: 'Patreon'
+        avianex: 'Avianex'
+        ello: 'Ello'
+        gofore: 'Gofore'
+        bimobject: 'Bimobject'
+        facebook-f: 'Facebook f'
+        square-google-plus: 'Square Google Plus'
+        google-plus-square: 'Google Plus square'
+        mandalorian: 'Mandalorian'
+        first-order-alt: 'First Order alt'
+        osi: 'Osi'
+        google-wallet: 'Google Wallet'
+        d-and-d-beyond: 'D and D Beyond'
+        periscope: 'Periscope'
+        fulcrum: 'Fulcrum'
+        cloudscale: 'Cloudscale'
+        forumbee: 'Forumbee'
+        mizuni: 'Mizuni'
+        schlix: 'Schlix'
+        square-xing: 'Square Xing'
+        xing-square: 'Xing square'
+        bandcamp: 'Bandcamp'
+        wpforms: 'Wpforms'
+        cloudversify: 'Cloudversify'
+        usps: 'Usps'
+        megaport: 'Megaport'
+        magento: 'Magento'
+        spotify: 'Spotify'
+        optin-monster: 'Optin monster'
+        fly: 'Fly'
+        aviato: 'Aviato'
+        itunes: 'Itunes'
+        cuttlefish: 'Cuttlefish'
+        blogger: 'Blogger'
+        flickr: 'Flickr'
+        viber: 'Viber'
+        soundcloud: 'Soundcloud'
+        digg: 'Digg'
+        tencent-weibo: 'Tencent Weibo'
+        symfony: 'Symfony'
+        maxcdn: 'Maxcdn'
+        etsy: 'Etsy'
+        facebook-messenger: 'Facebook Messenger'
+        audible: 'Audible'
+        think-peaks: 'Think Peaks'
+        bilibili: 'Bilibili'
+        erlang: 'Erlang'
+        cotton-bureau: 'Cotton Bureau'
+        dashcube: 'Dashcube'
+        42-group: '42 Group'
+        innosoft: 'Innosoft'
+        stack-exchange: 'Stack-Exchange'
+        elementor: 'Elementor'
+        square-pied-piper: 'Square Pied Piper'
+        pied-piper-square: 'Pied Piper square'
+        creative-commons-nd: 'Creative Commons nd'
+        palfed: 'Palfed'
+        superpowers: 'Superpowers'
+        resolving: 'Resolving'
+        xbox: 'Xbox'
+        searchengin: 'Searchengin'
+        tiktok: 'Tiktok'
+        square-facebook: 'Square Facebook'
+        facebook-square: 'Facebook square'
+        renren: 'Renren'
+        linux: 'Linux'
+        glide: 'Glide'
+        linkedin: 'Linkedin'
+        hubspot: 'Hubspot'
+        deploydog: 'Deploydog'
+        twitch: 'Twitch'
+        ravelry: 'Ravelry'
+        mixer: 'Mixer'
+        square-lastfm: 'Square LastFM'
+        lastfm-square: 'LastFM square'
+        vimeo: 'Vimeo'
+        mendeley: 'Mendeley'
+        uniregistry: 'Uniregistry'
+        figma: 'Figma'
+        creative-commons-remix: 'Creative Commons remix'
+        cc-amazon-pay: 'CC Amazon Pay'
+        dropbox: 'Dropbox'
+        instagram: 'Instagram'
+        cmplid: 'Cmplid'
+        facebook: 'Facebook'
+        gripfire: 'Gripfire'
+        jedi-order: 'Jedi Order'
+        uikit: 'Uikit'
+        fort-awesome-alt: 'Fort Awesome alt'
+        phabricator: 'Phabricator'
+        ussunnah: 'Ussunnah'
+        earlybirds: 'Earlybirds'
+        trade-federation: 'Trade Federation'
+        autoprefixer: 'Autoprefixer'
+        whatsapp: 'Whatsapp'
+        slideshare: 'Slideshare'
+        google-play: 'Google-Play'
+        viadeo: 'Viadeo'
+        line: 'Line'
+        google-drive: 'Google Drive'
+        servicestack: 'Servicestack'
+        simplybuilt: 'Simplybuilt'
+        bitbucket: 'Bitbucket'
+        imdb: 'Imdb'
+        deezer: 'Deezer'
+        raspberry-pi: 'Raspberry-PI'
+        jira: 'Jira'
+        docker: 'Docker'
+        screenpal: 'Screenpal'
+        bluetooth: 'Bluetooth'
+        gitter: 'Gitter'
+        d-and-d: 'D-and-D'
+        microblog: 'Microblog'
+        cc-diners-club: 'CC Diners Club'
+        gg-circle: 'GG circle'
+        pied-piper-hat: 'Pied Piper Hat'
+        kickstarter-k: 'Kickstarter k'
+        yandex: 'Yandex'
+        readme: 'Readme'
+        html5: 'Html5'
+        sellsy: 'Sellsy'
+        sass: 'Sass'
+        wirsindhandwerk: 'Wirsindhandwerk'
+        wsh: 'Wsh'
+        buromobelexperte: 'Buromobelexperte'
+        salesforce: 'Salesforce'
+        octopus-deploy: 'Octopus deploy'
+        medapps: 'Medapps'
+        ns8: 'Ns8'
+        pinterest-p: 'Pinterest p'
+        apper: 'Apper'
+        fort-awesome: 'Fort Awesome'
+        waze: 'Waze'
+        cc-jcb: 'CC JCB'
+        snapchat: 'Snapchat'
+        snapchat-ghost: 'Snapchat ghost'
+        fantasy-flight-games: 'Fantasy Flight Games'
+        rust: 'Rust'
+        wix: 'Wix'
+        square-behance: 'Square Behance'
+        behance-square: 'Behance square'
+        supple: 'Supple'
+        rebel: 'Rebel'
+        css3: 'Css3'
+        staylinked: 'Staylinked'
+        kaggle: 'Kaggle'
+        space-awesome: 'Space Awesome'
+        deviantart: 'Deviantart'
+        cpanel: 'Cpanel'
+        goodreads-g: 'Goodreads g'
+        square-git: 'Square git'
+        git-square: 'git square'
+        square-tumblr: 'Square Tumblr'
+        tumblr-square: 'Tumblr square'
+        trello: 'Trello'
+        creative-commons-nc-jp: 'Creative Commons nc jp'
+        get-pocket: 'Get Pocket'
+        perbyte: 'Perbyte'
+        grunt: 'Grunt'
+        weebly: 'Weebly'
+        connectdevelop: 'Connectdevelop'
+        leanpub: 'Leanpub'
+        black-tie: 'Black Tie'
+        themeco: 'Themeco'
+        python: 'Python'
+        android: 'Android'
+        bots: 'Bots'
+        free-code-camp: 'Free Code Camp'
+        hornbill: 'Hornbill'
+        js: 'Js'
+        ideal: 'Ideal'
+        git: 'Git'
+        dev: 'Dev'
+        sketch: 'Sketch'
+        yandex-international: 'Yandex International'
+        cc-amex: 'CC Amex'
+        uber: 'Uber'
+        github: 'Github'
+        php: 'Php'
+        alipay: 'Alipay'
+        youtube: 'Youtube'
+        skyatlas: 'Skyatlas'
+        firefox-browser: 'Firefox Browser'
+        replyd: 'Replyd'
+        suse: 'Suse'
+        jenkins: 'Jenkins'
+        twitter: 'Twitter'
+        rockrms: 'Rockrms'
+        pinterest: 'Pinterest'
+        buffer: 'Buffer'
+        npm: 'Npm'
+        yammer: 'Yammer'
+        btc: 'Btc'
+        dribbble: 'Dribbble'
+        stumbleupon-circle: 'Stumbleupon circle'
+        internet-explorer: 'Internet Explorer'
+        stubber: 'Stubber'
+        telegram: 'Telegram'
+        telegram-plane: 'Telegram Plane'
+        old-republic: 'Old Republic'
+        odysee: 'Odysee'
+        square-whatsapp: 'Square WhatsApp'
+        whatsapp-square: 'WhatsApp square'
+        node-js: 'Node JS'
+        edge-legacy: 'Edge Legacy'
+        slack: 'Slack'
+        slack-hash: 'Slack Hash'
+        medrt: 'Medrt'
+        usb: 'Usb'
+        tumblr: 'Tumblr'
+        vaadin: 'Vaadin'
+        quora: 'Quora'
+        reacteurope: 'Reacteurope'
+        medium: 'Medium'
+        medium-m: 'Medium m'
+        amilia: 'Amilia'
+        mixcloud: 'Mixcloud'
+        flipboard: 'Flipboard'
+        viacoin: 'Viacoin'
+        critical-role: 'Critical role'
+        sitrox: 'Sitrox'
+        discourse: 'Discourse'
+        joomla: 'Joomla'
+        mastodon: 'Mastodon'
+        airbnb: 'Airbnb'
+        wolf-pack-battalion: 'Wolf Pack Battalion'
+        buy-n-large: 'Buy-n-Large'
+        gulp: 'Gulp'
+        creative-commons-sampling-plus: 'Creative Commons sampling plus'
+        strava: 'Strava'
+        ember: 'Ember'
+        canadian-maple-leaf: 'Canadian Maple Leaf'
+        teamspeak: 'Teamspeak'
+        pushed: 'Pushed'
+        wordpress-simple: 'Wordpress simple'
+        nutritionix: 'Nutritionix'
+        wodu: 'Wodu'
+        google-pay: 'Google Pay'
+        intercom: 'Intercom'
+        zhihu: 'Zhihu'
+        korvue: 'Korvue'
+        pix: 'Pix'
+        steam-symbol: 'Steam symbol'
     elasticms-icons: 'ElasticMS icons'
     fa6-icons: 'Font Awesome 6'
+    fa6-brands-icons: 'Font Awesome 6 Brands'
     fa4-icons: 'Font Awesome 4 (dep)'
     glyphicon-bs3-icons: 'Glyphicon for Bootstrap 3 (dep)'
     not-defined: 'Not Defined'
