fix: better error message

--- a/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
@@ -677,7 +677,7 @@ service:
     alias:
         too_many_indexes: 'There is too many indexes'
     asset_extractor:
-        extract_error: 'An issue has been raised while extracting information from the asset/file %file_hash% : %error_message%'
+        extract_error: 'An issue has been raised while extracting information from the file %filename% : %error_message%<br>Please verify your input file and retry or add manually meta information within the info modal menu.'
         persist_error: 'An issue has been raised while persisting the information extracted from the asset/file %file_hash% : %error_message%'
     contenttype:
         field_not_found: 'Field %field_id% not found and ignored'
