feat: implement folder rename command
Removed stupid searchAll from ElasticaService.php, we should always just scroll.

The path property need to be immutable.

--- a/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
@@ -7,6 +7,9 @@ media_library:
             cancel: Cancel
         rename:
             title: 'Rename folder'
+            info: | 
+                Folder renaming in progress.
+                Please wait...
     file:
         load_more: 'Loading more files ...'
         add:
