fix: add translation keys

--- a/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
@@ -5,6 +5,11 @@ media_library:
             title: 'Add folder'
             submit: Create
             cancel: Cancel
+        delete:
+            title: 'Delete folder'
+            info: |
+                Folder removing in progress.
+                Please wait...
         rename:
             title: 'Rename folder'
             info: | 
