ref: rename translation key

--- a/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
@@ -7,12 +7,12 @@ media_library:
             cancel: Cancel
         delete:
             title: 'Delete folder'
-            info: |
+            job_info: |
                 Folder removing in progress.
                 Please wait...
         rename:
             title: 'Rename folder'
-            info: | 
+            job_info: | 
                 Folder renaming in progress.
                 Please wait...
     file:
