--- a/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
@@ -10,6 +10,9 @@ media_library:
         delete:
             title: 'Delete folder'
             submit: Confirm
+            warning: |
+                Are you sure you want to delete this folder? 
+                This action will also remove any subfolders and files within.
             job_info: |
                 Folder removing in progress.
                 Please wait...
