feat(core/media-lib): folder delete (#755)

--- a/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
@@ -1,13 +1,25 @@
 media_library:
     home: Home
+    submit: Save
+    cancel: Cancel
     folder:
         add:
             title: 'Add folder'
             submit: Create
             cancel: Cancel
+        delete:
+            title: 'Delete folder'
+            submit: Confirm
+            warning: |
+                Are you sure you want to delete this folder? 
+                This action will also remove any subfolders and files within.
+            job_info: |
+                Folder removing in progress.
+                Please wait...
         rename:
             title: 'Rename folder'
-            info: | 
+            submit: Rename
+            job_info: | 
                 Folder renaming in progress.
                 Please wait...
     file:
