feat: add delete multiple files button

--- a/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
@@ -30,6 +30,9 @@ media_library:
             title: 'Delete file'
         rename:
             title: 'Rename file'
+    files:
+        delete:
+            title: 'Delete %count% files'
 
 json_menu_nested:
     error:
