refactor(actions-button): move logic to identify if no action available

--- a/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
@@ -1015,6 +1015,7 @@ views:
             raw-view: 'Raw view'
             raw-view-icon-class: 'fa fa-th'
             action-dropdown-label: 'Actions in %environment%'
+            publish-label: 'Publish in %environment%'
         revision-toolbar-html:
             add-to-release: 'Add to release'
 wysiwyg:
