--- a/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
@@ -126,7 +126,7 @@ log:
             reindex_failed_in: 'The document "%label%" has encountered an exception during its reindexing in %environment%'
             added_to_release: 'Document "%label%" has been added to release "%release%"'
             can_not_add_draft_in_release: 'Revision in draft mode can not be added to a release'
-            document_not_in_target: 'Document "%label%" is not published in target environment "%environment%"'
+            document_not_in_target: 'Document "%label%" is not published in target environment "%target%"'
             document_already_in_release_but_updated: 'Document "%label%" has been updated with a new revision in release "%release%"'
             already_in_release: 'This revision of document "%label%" was already in release "%release%"'
     elasticsearch:
