--- a/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
@@ -804,7 +804,7 @@ task:
         rejected: Rejected
     title: Tasks
     update:
-        submit: 'Edit task'
+        submit: 'Save task'
         success: 'Task "%title%" successfully updated.'
         tab:
             history: History
